--- a/SoundCloud.Desktop/App.config
+++ b/SoundCloud.Desktop/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SoundCloud.Desktop.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="SoundCloud.Desktop.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
@@ -8,4 +14,28 @@
             <probing privatePath="dll;" />
         </assemblyBinding>
     </runtime>
+    <userSettings>
+        <SoundCloud.Desktop.Settings>
+            <setting name="AutoUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="HotkeysEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </SoundCloud.Desktop.Settings>
+        <SoundCloud.Desktop.Properties.Settings>
+            <setting name="AutoUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="HotkeysEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Upgraded" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Device" serializeAs="String">
+                <value />
+            </setting>
+        </SoundCloud.Desktop.Properties.Settings>
+    </userSettings>
 </configuration>
