Sorted Classes & Code for looks & performance. New spectrum function begun but not finished.

--- a/SoundCloud.Desktop/App.config
+++ b/SoundCloud.Desktop/App.config
@@ -36,6 +36,12 @@
             <setting name="Device" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value />
+            </setting>
         </SoundCloud.Desktop.Properties.Settings>
     </userSettings>
 </configuration>
