--- a/SoundCloud.Desktop/Properties/Settings.settings
+++ b/SoundCloud.Desktop/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="Device" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Username" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Password" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
