--- a/SoundCloud.Desktop/SoundCloud.Desktop.csproj
+++ b/SoundCloud.Desktop/SoundCloud.Desktop.csproj
@@ -119,73 +119,64 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Classes\Cover.xaml.cs">
-      <DependentUpon>Cover.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Classes\CoverItem.xaml.cs">
       <DependentUpon>CoverItem.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\Main.cs" />
     <Compile Include="Classes\SoundHandler.cs" />
-    <Compile Include="Classes\ExtensionMethods.cs" />
-    <Compile Include="Pages\PlaylistFrame.xaml.cs">
-      <DependentUpon>PlaylistFrame.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\LocalFrame.xaml.cs">
-      <DependentUpon>LocalFrame.xaml</DependentUpon>
+    <Compile Include="Pages\PlaylistPage.xaml.cs">
+      <DependentUpon>PlaylistPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SettingsFrame.xaml.cs">
-      <DependentUpon>SettingsFrame.xaml</DependentUpon>
+    <Compile Include="Pages\QueuePage.xaml.cs">
+      <DependentUpon>QueuePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\LikeFrame.xaml.cs">
-      <DependentUpon>LikeFrame.xaml</DependentUpon>
+    <Compile Include="Pages\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\StreamFrame.xaml.cs">
-      <DependentUpon>StreamFrame.xaml</DependentUpon>
+    <Compile Include="Pages\LikePage.xaml.cs">
+      <DependentUpon>LikePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SearchFrame.xaml.cs">
-      <DependentUpon>SearchFrame.xaml</DependentUpon>
+    <Compile Include="Pages\StreamPage.xaml.cs">
+      <DependentUpon>StreamPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SearchPage.xaml.cs">
+      <DependentUpon>SearchPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\Spectrum.xaml.cs">
       <DependentUpon>Spectrum.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings.cs" />
-    <Page Include="Classes\Cover.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Classes\CoverItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\PlaylistFrame.xaml">
+    <Page Include="Pages\PlaylistPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\LocalFrame.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\LoginPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SettingsFrame.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\LikeFrame.xaml">
+    <Page Include="Pages\QueuePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\StreamFrame.xaml">
+    <Page Include="Pages\SettingsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\LikePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\SearchFrame.xaml">
+    <Page Include="Pages\StreamPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SearchPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
